--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -5,6 +5,7 @@ html
       title #{title}
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/layouts/core.min.css?#{cacheBreaker}')
+    link(rel='stylesheet', href='/layouts/app.css?#{cacheBreaker}')
     block neck
   body
     div.navbar.navbar-default.navbar-fixed-top
@@ -21,10 +22,18 @@ html
           ul.nav.navbar-nav
             li: a(href='/') Home
             li: a(href='/about/') About
-            li: a(href='/signup/') Sign Up
+            li: a(href='/events/') Events
+            if !user && !user.username
+                li: a(href='/signup/') Sign Up
             li: a(href='/contact/') Contact
           ul.nav.navbar-nav.navbar-right
             if user && user.username
+              li: a(href='/myevents')
+                i.fa.fa-calendar
+                |  My Events
+              li: a(href='/events/add')
+                i.fa.fa-plus
+                |  Add Event
               li: a(href='#{user.defaultReturnUrl}')
                 i.fa.fa-user
                 |  #{user.username}
