--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -23,8 +23,6 @@ html
             li: a(href='/') Home
             li: a(href='/about/') About
             li: a(href='/events/') Events
-            if !user && !user.username
-                li: a(href='/signup/') Sign Up
             li: a(href='/contact/') Contact
           ul.nav.navbar-nav.navbar-right
             if user && user.username
@@ -44,6 +42,7 @@ html
 
     div.page
       div.container
+        != messages()
         block body
 
     div.footer
