--- a/views/events/edit.jade
+++ b/views/events/edit.jade
@@ -1,26 +1,26 @@
 extends ../../layouts/default
 
 block head
-    title Add Event
-
+    title Edit Event
+    
 block body
     div.row
         div.col-sm-8
             div.page-header
-                h1 Add Event
-                form(method='post', action='/events')
+                h1 Edit Event
+                form(method='post', action='/events/update/#{event._id}')
                     div.form-group
                         label Event Name:
-                        input.form-control(type='text', name='name')
+                        input.form-control(type='text', name='name' value='#{event.name}')
                     div.form-group
                         label Event Description:
-                        textarea.form-control(type='text', name='description')
+                        input.form-control(type='text', name='description' value='#{event.description}')
                     div.form-group
-                        label Venu:
-                        input.form-control(type='text', name='venue')
+                        label Venue:
+                        input.form-control(type='text', name='venue' value='#{event.venue}')
                     div.form-group
                         label Event Date:
-                        input.form-control(type='date', name='date')
+                        input.form-control(type='date', name='date' value='#{event.date}')
                     div.form-group
                         label Start Time:
                         input.form-control(type='time', name='startTime')
@@ -28,7 +28,8 @@ block body
                         label End Time:
                         input.form-control(type='time', name='endTime')
                     div.form-group
-                        button.btn.btn-primary.btn-signup(type='submit') Create Event
+                        button.btn.btn-primary.btn-signup(type='submit') Update Event
         div.col-sm-4
             div.page-header
                 h1 Sidebar
+                    
